--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -1,12 +1,17 @@
 \begin{abstract}
-\todo{abstract is last}
-\begin{comment}
-SPL (+CPL)
-
-WTD
-
-ROF
-
-IMP
-\end{comment}
+Session types ensure that communicating agents adhere to an agreed upon
+protocol. Recent work has presented a number of related systems with
+increasingly elaborate session type features including asynchronous buffered
+communication, type polymorphism and recursion. That these features are sound
+is crucial to maintain the assurances provided by session types. However, the
+metatheory of these systems has not been formally studied and proofs are
+typically developed by-hand and checked manually. The current paper describes
+work towards a formalisation of such a type system based on recent work on a
+two-tier system connecting classical linear logic and session types. The
+formalisation, developed in Coq, proves subject reduction for one of the tiers
+and makes strides towards the other system properties. This work illustrates
+the limitations of the state-of-the-art techniques for formalising programming
+language metatheory and identifies a number of issues and guidelines of which
+practitioners in the field may wish to take account. The paper concludes by
+highlighting some areas of future work.
 \end{abstract}
