Removed some more verbiage from the bibliography.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -3,7 +3,7 @@
  title = {Dependently Typed Functional Programs and their Proofs},
  school = {University of Edinburgh},
  year = {1999},
- url = {http://www.lfcs.informatics.ed.ac.uk/reports/00/ECS-LFCS-00-419/},
+ note = {ECS-LFCS-00-419},
 }
 @article{McKinna:2009,
   author = {McKinna, James and Synek, Dan and van der Weegen, Eelis},
@@ -56,7 +56,6 @@
  author = {Tov, Jesse A. and Pucella, Riccardo},
  title = {Practical Affine Types},
  booktitle = {POPL '11},
- year = {2011},
  location = {Austin, Texas, USA},
  pages = {447--458},
  numpages = {12},
@@ -84,7 +83,6 @@
                   Sparks, Zachary},
  title = {Typestate-oriented Programming},
  booktitle = {OOPSLA '09},
- year = {2009},
  location = {Orlando, Florida, USA},
  pages = {1015--1022},
  numpages = {8},
@@ -99,7 +97,6 @@
                   Gesbert, Nils and Caldeira, Alexandre Z.},
  title = {Modular Session Types for Distributed Object-oriented Programming},
  booktitle = {POPL '10},
- year = {2010},
  location = {Madrid, Spain},
  pages = {299--312},
  numpages = {14},
@@ -146,7 +143,6 @@
  title = {A Framework for the Formalisation of Pi Calculus Type Systems in
           Isabelle/HOL},
  booktitle = {TPHOLs '01},
- year = {2001},
  pages = {217--232},
  numpages = {16},
  acmid = {695050},
@@ -184,7 +180,6 @@
  title = {GMETA: A Generic Formal Metatheory Framework for First-order
                   Representations},
  booktitle = {ESOP'12},
- year = {2012},
  location = {Tallinn, Estonia},
  pages = {436--455},
  numpages = {20},
@@ -211,7 +206,6 @@ numpages = {35},
  title = {Lolliproc: To Concurrency from Classical Linear Logic via
 Curry-howard and Control},
  booktitle = {ICFP '10},
- year = {2010},
  location = {Baltimore, Maryland, USA},
  pages = {39--50},
  numpages = {12},
@@ -224,7 +218,6 @@ Curry-howard and Control},
  author = {Mazurak, Karl and Zhao, Jianzhou and Zdancewic, Steve},
  title = {Lightweight Linear Types in System F${}^\circ$},
  booktitle = {TLDI '10},
- year = {2010},
  location = {Madrid, Spain},
  pages = {77--88},
  numpages = {12},
@@ -247,7 +240,7 @@ Curry-howard and Control},
                   Conor},
  title = {Strongly Typed Term Representations in Coq},
  journal = {J. Autom. Reason.},
- issue_date = {August    2012},
+ issue_date = {August 2012},
  volume = {49},
  number = {2},
  month = aug,
@@ -267,7 +260,6 @@ Curry-howard and Control},
                   Weirich, Stephanie and Zdancewic, Steve},
  title = {Mechanized Metatheory for the Masses: The PoplMark Challenge},
  booktitle = {TPHOLs'05},
- year = {2005},
  location = {Oxford, UK},
  pages = {50--65},
  numpages = {16},
@@ -293,7 +285,6 @@ language={English}
                   C. and Pollack, Randy and Weirich, Stephanie},
  title = {Engineering Formal Metatheory},
  booktitle = {POPL '08},
- year = {2008},
  location = {San Francisco, California, USA},
  pages = {3--15},
  numpages = {13},
@@ -329,7 +320,6 @@ language={English}
  author = {Caires, Lu\'{\i}s and Pfenning, Frank},
  title = {Session Types As Intuitionistic Linear Propositions},
  booktitle = {CONCUR'10},
- year = {2010},
  location = {Paris, France},
  pages = {222--236},
  numpages = {15},
@@ -340,23 +330,22 @@ language={English}
 @inproceedings{Lindley:2014:SAP,
  author = {Lindley, Sam and Morris, James G.},
  title = {Sessions as Propositions},
- series = {PLACES'14},
+ series = {PLACES '14},
  month = {April},
  year = {2014},
 }
-@unpublished{Lindley:2014:SPS,
+@inproceedings{Lindley:2014:SPS,
  author = {Lindley, Sam and Morris, James G.},
  title = {A Semantics for Propositions as Sessions},
- note = {Submitted.},
+ booktitle = {ESOP '15},
  month = {October},
- year = {2014},
+ year = {2015},
 }
 @inproceedings{Fahndrich:2002,
  author = {F\"{a}hndrich, Manuel and DeLine, Robert},
  title = {Adoption and Focus: Practical Linear Types for Imperative
                   Programming},
  booktitle = {PLDI '02},
- year = {2002},
  location = {Berlin, Germany},
  pages = {13--24},
  numpages = {12},
@@ -392,7 +381,6 @@ language={English}
  author = {Delahaye, David},
  title = {A Tactic Language for the System Coq},
  booktitle = {LPAR'00},
- year = {2000},
  location = {Reunion Island, France},
  pages = {85--95},
  numpages = {11},
@@ -404,7 +392,6 @@ language={English}
  author = {Chlipala, Adam},
  title = {Parametric Higher-order Abstract Syntax for Mechanized Semantics},
  booktitle = {ICFP '08},
- year = {2008},
  location = {Victoria, BC, Canada},
  pages = {143--156},
  numpages = {14},
