--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -7,6 +7,7 @@
 \usepackage{cmll}
 \usepackage{prooftree}
 \usepackage{amsmath}
+\usepackage[all]{nowidow}
 \newcommand{\typestate}[2]{{#1}\gg{#2}}
 \usepackage[style=alphabetic,sorting=nymt,natbib=true,firstinits=true,
   maxbibnames=100]{biblatex}
