--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -18,11 +18,8 @@
  year={2013},
  booktitle={Automated Reasoning with Analytic Tableaux and Related Methods},
  volume={8123},
- series={Lecture Notes in Computer Science},
- editor={Galmiche, Didier and Larchey-Wendling, Dominique},
- publisher={Springer Berlin Heidelberg},
+ series={LNCS},
  pages={257-272},
- language={English}
 }
 @incollection{Dawson:2010,
  title={Generic Methods for Formalising Sequent Calculi Applied to Provability
@@ -31,9 +28,7 @@
  year={2010},
  booktitle={Logic for Programming, Artificial Intelligence, and Reasoning},
  volume={6397},
- series={Lecture Notes in Computer Science},
- editor={Ferm\"{u}ller, Christian G. and Voronkov, Andrei},
- publisher={Springer Berlin Heidelberg},
+ series={LNCS},
  keywords={provability logic; cut admissibility; interactive theorem proving;
                   proof theory},
  pages={263-277},
@@ -43,12 +38,9 @@
  title={Formalised Cut Admissibility for Display Logic},
  author={Dawson, Jeremy E. and Gor\'{e}, Rajeev},
  year={2002},
- booktitle={Theorem Proving in Higher Order Logics},
+ booktitle={TPHOLs},
  volume={2410},
- series={Lecture Notes in Computer Science},
- editor={Carre\~{n}o, Victor A. and Mu\~{n}oz, C\'{e}sarA. and Tahar,
-                  Sofi\`{e}ne},
- publisher={Springer Berlin Heidelberg},
+ series={LNCS},
  pages={131-147},
  language={English}
 }
@@ -61,7 +53,6 @@
  pages = {447--458},
  numpages = {12},
  acmid = {1926436},
- publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {affine types, linear logic, modules, polymorphism, type systems},
 }
@@ -71,7 +62,6 @@
                   and Vilhelm Sjoberg and Brent Yorgey},
   title = {Software Foundations},
   year = {2014},
-  publisher = {Electronic textbook},
   plclub = {Yes},
   bcp = {Yes},
   keys = {poplmark,books},
@@ -89,7 +79,6 @@
  pages = {1015--1022},
  numpages = {8},
  acmid = {1640073},
- publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {objects, paradigms, permissions, programming language, states,
                   types, typestate},
@@ -279,7 +268,7 @@ Curry-howard and Control},
 author={Chargu{\'e}raud, Arthur},
 title={The Locally Nameless Representation},
 year={2012},
-journal={Journal of Automated Reasoning},
+journal={J. Autom. Reason.},
 volume={49},
 number={3},
 publisher={Springer Netherlands},
@@ -349,7 +338,7 @@ language={English}
  title = {A Semantics for Propositions as Sessions},
  booktitle = {ESOP '15},
  month = {October},
- year = {2014},
+ year = {2015},
 }
 @inproceedings{Fahndrich:2002,
  author = {F\"{a}hndrich, Manuel and DeLine, Robert},
